--- a/Concur/HW4/Makefile
+++ b/Concur/HW4/Makefile
@@ -2,12 +2,12 @@
 CC=gcc
 CFLAGS=-lpthread -Wall
 
-all: problem1 problem2
+all: barber cigarette
 
 barber: barber.c 
 	$(CC) barber.c -o barber $(CFLAGS)
 
-problem2: cigarette.c
+cigaretete: cigarette.c
 	$(CC) cigarette.c -o cig $(CFLAGS)
 
 clean: 
